# cebus-mcp-scanner

./: .gitignore  LICENSE  README.md  example_config.yaml  pyproject.toml
config/: config.json  config.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  MCP_TOOL_CONTRACT.md  MULTI_LANGUAGE_DESIGN.md  SECURITY_ROOLS.md  TODO.md
mcp_scanner/: __init__.py  ast_common.py  cli.py  config.py  core_types.py  logging_utils.py  mcp_server.py  patterns.py  scanner.py  settings.py  types.py
mcp_scanner/analyzers/: __init__.py  analyzer_adapter.py  base.py  go_analyzer.py  go_mapper.py  js_ts_analyzer.py  js_ts_mapper.py  language_detector.py  multi_analyzer.py  python_analyzer.py  python_analyzer_v2.py  python_mapper.py  rust_analyzer.py  rust_mapper.py
mcp_scanner/integrations/: __init__.py  mcp_tool.py
mcp_scanner/loader/: __init__.py  archive_utils.py  project_loader.py
mcp_scanner/reporting/: __init__.py  console.py  json_report.py  sarif.py
mcp_scanner/rules/: __init__.py  base.py  security_rules.py
tests/: test_analyzers_and_adapter.py  test_ast_common_walk.py  test_config_loading.py  test_go_analyzer.py  test_js_ts_analyzer.py  test_mcp_server_actions.py  test_project_loader.py  test_python_analyzer_v2.py  test_reporting_formats.py  test_rules.py  test_rust_analyzer.py  test_scanner_behaviors.py  test_unified_analyzer_smoke.py
tests/assets/: go_example.go  js_ts_example.ts  rust_example.rs  safe_code.py  security_rules_fixture.py  vulnerable_http.py
tests/assets/vulnerable_MCP/: README.md  config.py  mcp.json  server.py  storage.py  tools.py
